Simplified the project names

--- a/src/Api/Api.csproj
+++ b/src/Api/Api.csproj
@@ -4,7 +4,7 @@
     <TargetFramework>net9.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
-    <UserSecretsId>c864c2c9-ba35-4294-acd5-7a15c797b9b9</UserSecretsId>
+    <UserSecretsId>6ae54e8a-c6aa-49e6-9a7c-92fb6c2fd562</UserSecretsId>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
   </PropertyGroup>
 
@@ -14,7 +14,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\TemplateService.Infrastructure\TemplateService.Infrastructure.csproj" />
+    <ProjectReference Include="..\Infrastructure\Infrastructure.csproj" />
   </ItemGroup>
 
 </Project>
