--- a/src/Api/appsettings.json
+++ b/src/Api/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "AppConnection": "Data Source=app.db"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
